--- a/clusters/production/portal/acme/acme.yaml
+++ b/clusters/production/portal/acme/acme.yaml
@@ -21,8 +21,8 @@ metadata:
 data:
   ca.json: |
     {
-      "address": ":8443",
-      "publicAddress": ":443",
+      "address": ":8080",
+      "publicAddress": ":80",
       "commonName": "acme.hm.edu",
       "dnsNames": [
         "acme.hm.edu"
@@ -96,15 +96,15 @@ spec:
           name: app
           command: ["/usr/local/bin/step-ca"]
           ports:
-            - containerPort: 443
+            - containerPort: 80
               protocol: TCP
-            - containerPort: 8443
+            - containerPort: 8080
               protocol: TCP
           readinessProbe:
             httpGet:
               path: /health
-              port: 8443
-              scheme: HTTPS
+              port: 8080
+              scheme: HTTP
             periodSeconds: 30
             initialDelaySeconds: 10
           volumeMounts:
@@ -113,6 +113,8 @@ spec:
             - mountPath: /home/step/config
               name: cert-config
           env:
+            - name: STEP_TLS_INSECURE
+              value: "1"
             - name: STEP_LOGGER_ONLY_TRACE_HEALTH_ENDPOINT
               value: "true"
             - name: OTEL_EXPORTER_JAEGER_ENDPOINT
@@ -139,10 +141,10 @@ spec:
   type: ClusterIP
   ports:
     - name: acme
-      port: 443
-      targetPort: 443
+      port: 80
+      targetPort: 80
     - name: internal
-      port: 8443
-      targetPort: 8443
+      port: 8080
+      targetPort: 8080
   selector:
     app: certificates
