fix acme ingress

--- a/clusters/production/istio/istio-services.yaml
+++ b/clusters/production/istio/istio-services.yaml
@@ -76,7 +76,7 @@ spec:
     - acme.hm.edu
   gateways:
     - istio-ingress/gateway-portal
-  tls:
+  http:
     - route:
         - destination:
             host: certificates
