feat: try adding admin users

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ clusters/production/gitlab-runner/secrets.yaml
 clusters/production/gitlab-runner-lrz/secrets.yaml
 clusters/production/monitoring/vector/aggregator/secrets.yaml
 clusters/production/network/secrets.yaml
+clusters/production/portal/backend/secrets.yaml
