--- a/clusters/production/gitlab-runner-lrz/gitlab-runner.yaml
+++ b/clusters/production/gitlab-runner-lrz/gitlab-runner.yaml
@@ -34,6 +34,7 @@ spec:
           [runners.kubernetes]
             helper_image_flavor = "ubuntu"
             namespace = "gitlab-runner-lrz"
+            cap_add = ["NET_ADMIN"]
             # Drop ndots for quicker resolution
             [[runners.kubernetes.dns_config.options]]
               name = "ndots"
