--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ clusters/production/gitlab-runner-lrz/secrets.yaml
 clusters/production/monitoring/vector/aggregator/secrets.yaml
 clusters/production/network/secrets.yaml
 clusters/production/portal/backend/secrets.yaml
+clusters/production/gitlab-runner/values.yaml
