--- a/clusters/production/gitlab-runner/kustomization.yaml
+++ b/clusters/production/gitlab-runner/kustomization.yaml
@@ -1,6 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: gitlab-runner
 resources:
   - namespace.yaml
   - secrets.sops.yaml
   - gitlab-runner.yaml
+secretGenerator:
+  - name: gitlab-runner-values
+    files:
+      - values.yaml=values.enc.yaml
