--- a/clusters/production/gitlab-runner/kustomization.yaml
+++ b/clusters/production/gitlab-runner/kustomization.yaml
@@ -9,3 +9,5 @@ secretGenerator:
   - name: gitlab-runner-values
     files:
       - values.yaml=values.enc.yaml
+configurations:
+  - kustomizeconfig.yaml
