--- a/clusters/production/portal/backend/secrets.sops.yaml
+++ b/clusters/production/portal/backend/secrets.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: domain-interface
     namespace: portal
 stringData:
-    admins: ENC[AES256_GCM,data:V4vcN4LdUsHrhs9McPvRg2KEeu+t5vEBIc1NyBtVbTSiFPUmDAcBqFkLfflWLP6G3Ot6qfGPU3cBBfRGvODRnjLYdA228mxCnWZCfkXPvMpzpojMrit0psCw0baRLTC6kO8ueXmGjeYK77dZbksNHk9w9Q==,iv:3/BMKra6YHMdjN5/mvhSJdY6qp15OeLDJOJo5slmBBc=,tag:AHwaauLnKNtjI02spSNBLw==,type:str]
+    admins: ENC[AES256_GCM,data:k5sVtUQ+88EdfqwDle8HfK6hO9EUmkQxFid+tlZUZ33OgScVHEimCZhSxoOF19xjFQNs2H84HuPqkeICo8HL25QLNHnHabyhnHBiwTV5VcD5hY7Axf8eXj8+m8b+iJOjCNufZFHBIU6/K1FFnkjC8L1R2w==,iv:vREOkjmS0M5oLuTLBgmoyEePcNzk59WCVgR/cAMye8Q=,tag:BgF5x8vmeKaSJTL5YPpknQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,44 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmQVVNbEtlVVVrc2h3cyty
-            ZzIyMlpscGdZVkJnSGswa1orSG9MblVReVhnCkxwV21JV2RTVDlWRFc5Szg3WkVM
-            QkVyOHFwM0NCTEdlckg1bXNPRkhXSUUKLS0tIGNIRlVnczUyNk1JQm5ERlhGT3pW
-            U1FIdEdCRDZObkFjTXdsQ3lYbjJvUHcK6XyQNsEWL8RYS7fJ5X28uDUv2SE3A8T9
-            moarxGdnzmxq3eCfZByoJjfruf4MRa0ASHPB7vDyn+p9LR3abAtpUQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBMzVianZDTFRTMHJQcnN0
+            cFp1KzBVcnQrT1FvblYrQXRUdlMzUm1sSTFnClhxK3FSbEpreGVYVm5XVEhoWVFy
+            OHBzSE5SaHhsdmZETExNWFBsOW8vTjAKLS0tIEYvUWtXb1lCSEVhQmJ4VXc4QVp4
+            R3VGbnZnK215bmlTT05Tb00zSFhZMTgKWJnc0de93YTN9pIfnvqE+43I/cQh6UQg
+            UTlNA8+smQyXNUsJmg+5BsnioIXcCSmTBkCuAOfpGy2CTCcN9fXf/Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-25T06:06:16Z"
-    mac: ENC[AES256_GCM,data:vvxDDXwvrOCVnoBKPxMEi28ltONp9tbnMWefLtv6igxwZSfo+o3XvNIb7f3CztAmC9eWjwh88NhZkOFIbYF46uAs6SXWD6e2KB4RyJuELFm7VaXSRJN6lBupVun3iSXpePdNJN6EYgJDUjl7hTOKXbX0Q/S+ToB3tMPZWbqVUzU=,iv:azwOVTBw7Y2beckZK9mbAU6Bat5NrdKhaxP7RIGInfQ=,tag:Aciq5jZ2GKPl5qriTrcR/A==,type:str]
+    lastmodified: "2023-09-28T05:25:25Z"
+    mac: ENC[AES256_GCM,data:gr+Y4NoM2og51F/301rkXk4+z5W8jwm6b3ElKS6Rmy0iThKYUmklk7r2ZmJhDUDCXky0bCwpdvFe3ddtwrIgXs3uT1qMGu/6ZkL8bxZt8FYAx5Fwrl0H3xfGPWoFE0qHm1f9QU6/TruEz2rhozbCTfcKf3vzXFiweFl9XVn2bJ0=,iv:RY7Nwx5UHKAvOSgSS+CnAh0gCf2vGi1HkDbjj/giLu8=,tag:f/x2hqh+CR8Ed68uec5/eg==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.0
+---
+apiVersion: v1
+kind: Secret
+metadata:
+    name: mail
+    namespace: portal
+stringData:
+    mail_bcc: ENC[AES256_GCM,data:qHtuc0Ee0NS1sX8VUj9dekTm,iv:Ggwpm32KT1BUc1UFiG9+NxpMHS4QggzXwjlfGCKJyJg=,tag:37QhEosGnO089Y9Da1UyZA==,type:str]
+    mail_from: ENC[AES256_GCM,data:AixP0G2KzjABbfksNVsx6xBd,iv:TbeyIZJrMVjvFP67KKkMbabm/RZ3YaDGilBm+VaKvDI=,tag:oCu8zhFPXt8pubpKZGjjsg==,type:str]
+    mail_host: ENC[AES256_GCM,data:O20+6vlOf1JmKfOEqMQ=,iv:AGbfWYVAuSSZJ86Du+Wv1mjpAr3azuEI6D8QkGeABx8=,tag:vWrv53VZA+PEV52TQpnl/w==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBMzVianZDTFRTMHJQcnN0
+            cFp1KzBVcnQrT1FvblYrQXRUdlMzUm1sSTFnClhxK3FSbEpreGVYVm5XVEhoWVFy
+            OHBzSE5SaHhsdmZETExNWFBsOW8vTjAKLS0tIEYvUWtXb1lCSEVhQmJ4VXc4QVp4
+            R3VGbnZnK215bmlTT05Tb00zSFhZMTgKWJnc0de93YTN9pIfnvqE+43I/cQh6UQg
+            UTlNA8+smQyXNUsJmg+5BsnioIXcCSmTBkCuAOfpGy2CTCcN9fXf/Q==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2023-09-28T05:25:25Z"
+    mac: ENC[AES256_GCM,data:gr+Y4NoM2og51F/301rkXk4+z5W8jwm6b3ElKS6Rmy0iThKYUmklk7r2ZmJhDUDCXky0bCwpdvFe3ddtwrIgXs3uT1qMGu/6ZkL8bxZt8FYAx5Fwrl0H3xfGPWoFE0qHm1f9QU6/TruEz2rhozbCTfcKf3vzXFiweFl9XVn2bJ0=,iv:RY7Nwx5UHKAvOSgSS+CnAh0gCf2vGi1HkDbjj/giLu8=,tag:f/x2hqh+CR8Ed68uec5/eg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
