--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -70,6 +70,23 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: gitlab-agent
+  namespace: flux-system
+spec:
+  interval: 10m
+  path: ./clusters/production/gitlab-agent
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: gitlab-runner-lrz
   namespace: flux-system
 spec:
