start playing with gitlab workspaces

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ clusters/production/network/secrets.yaml
 clusters/production/portal/backend/secrets.yaml
 clusters/production/gitlab-runner/values.yaml
 clusters/production/gitlab-agent/values.yaml
+clusters/production/cert-manager/secrets.yaml
