--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -104,7 +104,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cert-manager
+  name: cert-manager-prod
   namespace: flux-system
 spec:
   interval: 10m
