feat: use certauth

--- a/clusters/production/portal/acme/acme.yaml
+++ b/clusters/production/portal/acme/acme.yaml
@@ -113,6 +113,8 @@ spec:
             - mountPath: /home/step/config
               name: cert-config
           env:
+            - name: ACME_DNS
+              value: "129.187.208.40:53"
             - name: STEP_TLS_INSECURE
               value: "1"
             - name: STEP_LOGGER_ONLY_TRACE_HEALTH_ENDPOINT
