try to deploy workspace proxy

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ clusters/production/portal/backend/secrets.yaml
 clusters/production/gitlab-runner/values.yaml
 clusters/production/gitlab-agent/values.yaml
 clusters/production/cert-manager/secrets.yaml
+clusters/production/gitlab-workspace-proxy/values.yaml
