--- a/clusters/production/gitlab-workspace-proxy/kustomizeconfig.yaml
+++ b/clusters/production/gitlab-workspace-proxy/kustomizeconfig.yaml
@@ -1,6 +1,7 @@
 nameReference:
   - kind: Secret
     version: v1
+    namespace: gitlab-agent
     fieldSpecs:
       - path: spec/valuesFrom/name
         kind: HelmRelease
