--- a/clusters/production/istio/istio-services.yaml
+++ b/clusters/production/istio/istio-services.yaml
@@ -137,6 +137,24 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
+  name: gitlab-workspaces
+  namespace: gitlab-agent
+spec:
+  hosts:
+    - workspaces.it.hm.edu
+    - "*.workspaces.it.hm.edu"
+  gateways:
+    - istio-ingress/gateway-portal
+  http:
+    - route:
+        - destination:
+            host: gitlab-workspaces-proxy-http
+            port:
+              number: 80
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
   name: workaround-to-renew-certs
   namespace: istio-ingress
 spec:
