fix organization name

--- a/clusters/production/portal/acme/acme.yaml
+++ b/clusters/production/portal/acme/acme.yaml
@@ -65,7 +65,7 @@ data:
       "validationBroker": {
         "host": "validation.pki.hm.edu",
         "username": "server.hm.edu",
-        "organization": "hm.edu"
+        "organization": "hm"
       }
     }
 ---
