add blackbox rules

--- a/clusters/production/monitoring/kube-prometheus-stack/kustomization.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - helm.yaml
   - rules/kured.yaml
   - rules/system.yaml
+  - rules/blackbox.yaml
 secretGenerator:
   - name: prometheus-values
     files:
