fix: optimize monitoring

--- a/clusters/production/monitoring/kube-prometheus-stack/rules/blackbox.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/rules/blackbox.yaml
@@ -18,7 +18,7 @@ spec:
             severity: critical
           annotations:
             summary: Blackbox probe failed (instance {{ $labels.instance }})
-            description: "Probe failed\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+            description: "Probe failed\n  value = {{ $value }}\n  labels = {{ $labels }}"
         - alert: BlackboxSslCertificateWillExpireSoon
           expr: 3 <= round((last_over_time(probe_ssl_earliest_cert_expiry[10m]) - time()) / 86400, 0.1) < 20
           for: 0m
@@ -26,7 +26,7 @@ spec:
             severity: warning
           annotations:
             summary: Blackbox SSL certificate will expire soon (instance {{ $labels.instance }})
-            description: "SSL certificate expires in less than 20 days\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+            description: "SSL certificate expires in less than 20 days\n  value = {{ $value }}\n  labels = {{ $labels }}"
         - alert: BlackboxProbeSlowHttp
           expr: avg_over_time(probe_http_duration_seconds[1m]) > 1
           for: 1m
@@ -34,7 +34,7 @@ spec:
             severity: warning
           annotations:
             summary: Blackbox probe slow HTTP (instance {{ $labels.instance }})
-            description: "HTTP request took more than 1s\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+            description: "HTTP request took more than 1s\n  value = {{ $value }}\n  labels = {{ $labels }}"
         - alert: BlackboxProbeHttpFailure
           expr: probe_http_status_code <= 199 OR probe_http_status_code >= 400
           for: 0m
@@ -42,4 +42,4 @@ spec:
             severity: critical
           annotations:
             summary: Blackbox probe HTTP failure (instance {{ $labels.instance }})
-            description: "HTTP status code is not 200-399\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+            description: "HTTP status code is not 200-399\n  value = {{ $value }}\n  labels = {{ $labels }}"
