feat: start playing with thanos

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ clusters/production/gitlab-agent/values.yaml
 clusters/production/cert-manager/secrets.yaml
 clusters/production/gitlab-workspace-proxy/values.yaml
 clusters/production/portal/acme/secrets.yaml
+clusters/production/monitoring/thanos/values.yaml
