--- a/clusters/production/monitoring/thanos/kustomization.yaml
+++ b/clusters/production/monitoring/thanos/kustomization.yaml
@@ -1,5 +1,12 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: monitoring
 resources:
   - helm.yaml
+secretGenerator:
+  - name: thanos-values
+    files:
+      - values.yaml=values.enc.yaml
+configurations:
+  - kustomizeconfig.yaml
