--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -2,6 +2,23 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: tailscale
+  namespace: flux-system
+spec:
+  interval: 10m
+  path: ./clusters/production/tailscale
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: portal
   namespace: flux-system
 spec:
