--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ clusters/production/cert-manager/secrets.yaml
 clusters/production/gitlab-workspace-proxy/values.yaml
 clusters/production/portal/acme/secrets.yaml
 clusters/production/monitoring/thanos/values.yaml
+clusters/production/tailscale/secrets.yaml
