--- a/clusters/production/tailscale/release.yaml
+++ b/clusters/production/tailscale/release.yaml
@@ -1,13 +1,28 @@
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: HelmChart
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
 metadata:
   name: tailscale
   namespace: tailscale
 spec:
-  interval: 5m0s
-  chart: ./cmd/k8s-operator/deploy/chart
-  reconcileStrategy: ChartVersion
-  sourceRef:
-    kind: GitRepository
-    name: tailscale
-  version: '0.1.0'
+  interval: 15m
+  releaseName: tailscale-operator
+  chart:
+    spec:
+      chart: ./cmd/k8s-operator/deploy/chart
+      version: 0.1.0
+      sourceRef:
+        kind: GitRepository
+        name: tailscale
+  install:
+    remediation: # perform remediation when helm install fails
+      retries: 3
+  upgrade:
+    remediation: # perform remediation when helm upgrade fails
+      retries: 3
+      remediateLastFailure: true # remediate the last failure, when no retries remain
+    cleanupOnFail: true
+    crds: CreateReplace
+  rollback:
+    timeout: 10m
+    recreate: true
+    cleanupOnFail: true
