--- a/clusters/production/monitoring/thanos/helm.yaml
+++ b/clusters/production/monitoring/thanos/helm.yaml
@@ -35,7 +35,7 @@ spec:
       service:
         annotations:
           tailscale.com/expose: "true"
-          tailscale.com/tags: "tag:k8s-operator,tag:k8s-monitoring"
+          tailscale.com/tags: "tag:k8s,tag:k8s-monitoring"
     query:
       enabled: true
       replicaCount: 3
