try using ruler

--- a/clusters/production/monitoring/thanos/helm.yaml
+++ b/clusters/production/monitoring/thanos/helm.yaml
@@ -69,7 +69,7 @@ spec:
         enabled: true
         size: 10Gi
     ruler:
-      enabled: false
+      enabled: true
     metrics:
       enabled: true
       serviceMonitor:
