--- a/clusters/production/monitoring/thanos/helm.yaml
+++ b/clusters/production/monitoring/thanos/helm.yaml
@@ -70,6 +70,12 @@ spec:
         size: 10Gi
     ruler:
       enabled: true
+      replicaCount: 2
+      replicaLabel: __replica__
+      alertmanagers: ["http://alertmanager-operated.monitoring.svc.cluster.local:9093"]
+      persistence:
+        enabled: true
+        size: 10Gi
     metrics:
       enabled: true
       serviceMonitor:
