enable remote write in prometheus

--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -162,6 +162,7 @@ spec:
         retentionSize: 500GB
         enableAdminAPI: true
         walCompression: true
+        enableRemoteWriteReceiver: true
         storageSpec:
           volumeClaimTemplate:
             spec:
